Add the FB event link for #98

--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -23,7 +23,8 @@ Free entry, no registration required. Talks start 7.30pm, doors from
 Please feel free to bring interesting things along to show others - things
 you've built, things to play, or curiosities to discuss.
 
-Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
+Don't forget to <a href="https://www.facebook.com/events/2392535060997651/">attend the Facebook event</a>, <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, 
+and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
 
 With short talks from...
