--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -60,6 +60,10 @@ And music from...
 
 <a href="https://www.sarahangliss.com/">sarahangliss.com</a> / <a href="https://twitter.com/sarah_angliss">@sarah_angliss</a>
 
+<b>==== 2xAA ====</b>
+
+<a href="https://2xaa.fm/">2xaa.fm</a> / <a href="https://twitter.com/_2xAA">@_2xAA</a>
+
 
 With more to be announced, including the traditional Dorkmas thing-making activity!
 
