Update lineup for #98

--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -8,8 +8,12 @@ tags:
     - Natalie Kane
     - Jack Armitage
     - Jo Franchetti
-    - Matthew Ye-King
     - Sarah Angliss
+    - 2xAA
+    - Matthew Yee-King
+    - Evan Raskob
+    - Nick Rothwell
+    - Mick Grierson
 ---
 
 <b>DORKMAS 2019!</b>
@@ -31,13 +35,37 @@ With short talks from...
 
 <b>==== Natalie Kane ====</b>
 
+"3615 MUSEUM"
+
+Digital design! What the hell is it? And why would a museum be interested in
+it? It's pretty important that we try to make sense of how we got here, from
+early french sex chat rooms on adorable plastic terminals, to Barbie dolls that
+spy on you, to misogynistic computer adverts and 3D printed speculums. Natalie
+will take you through the challenges we face in preserving, accessing and
+understanding our digital heritage, and there will only be a tiny bit of
+theory, promise. 
+
 <a href="https://ndkane.com/">ndkane.com</a> / <a href="https://twitter.com/nd_kane">@nd_kane</a>
 
 <b>==== Jack Armitage ====</b>
 
 "Craft in digital musical instrument design"
 
-<a href="http://www.jackarmitage.com/"</a>jackarmitage.com</a> / <a href="https://twitter.com/jdkarmitage">@jdkarmitage</a>
+Investigations into reframing digital musical instrument design as a tactile and embodied craft practice
+
+In this short talk I will review some of my PhD research in the domain of
+digital musical instrument design, sometimes known as digital lutherie. Despite
+my background in engineering, technology and startups, and my music practice in
+live coding, I have spent recent years attempting to deconstruct the
+techno-centric perspective that dominates contemporary musical instrument
+making. Through interviewing violin luthiers and devising craft workshops for
+so-called "digital luthiers", I have been seeking out paths towards tactile and
+embodied forms of digital craft, which I recently began referring to as hybrid
+lutherie. Right now I am recruiting for my final study, and I will conclude by
+offering a preview of the activity involved and invite attendees to participate
+in the research.
+
+<a href="http://www.jackarmitage.com/"</a>jackarmitage.com</a> / <a href="http://instrumentslab.org/research/craft">instrumentslab.org/research/craft</a> / <a href="https://twitter.com/jdkarmitage">@jdkarmitage</a>
 
 <b>==== Jo Franchetti ====</b>
 
@@ -52,17 +80,28 @@ sewing. Jo is a web developer and hobbyist IoT wearables maker.
 
 And music from...
 
-<b>==== Matthew Yee-King ====</b>
-
-<a href="http://www.yeeking.net/index.php?location=sound">yeeking.net</a> / <a href="https://twitter.com/myeeking">@myeeking</a>
-
 <b>==== Sarah Angliss ====</b>
+
+Featuring theremin, robotic carillon, GPO telephones, and more.
 
 <a href="https://www.sarahangliss.com/">sarahangliss.com</a> / <a href="https://twitter.com/sarah_angliss">@sarah_angliss</a>
 
 <b>==== 2xAA ====</b>
 
+2xAA harnesses the low-fi power of the Nintendo Game Boy and various other
+portable hardware to create flowing house and techno sets. He also produces
+eye catching visuals using nothing but JavaScript.
+
 <a href="https://2xaa.fm/">2xaa.fm</a> / <a href="https://twitter.com/_2xAA">@_2xAA</a>
+
+<b>==== "Synthclub Jam Session" ====</b>
+
+Matthew Yee-King, Evan Raskob, Nick Rothwell (Cassiel), and Mick Grierson.
+
+* <a href="http://www.yeeking.net/index.php?location=sound">yeeking.net</a> / <a href="https://twitter.com/myeeking">@myeeking</a>
+* <a href="https://pixelist.info/bitlip-performances/">pixelist.info</a> / <a href="https://twitter.com/evanraskob">@evanraskob</a>
+* <a href="http://www.cassiel.com/about/">cassiel.com</a>
+* <a href="http://mickgrierson.co.uk/">mickgrierson.co.uk</a>
 
 
 With more to be announced, including the traditional Dorkmas thing-making activity!
