update 2xaa's bio

--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -88,9 +88,10 @@ Featuring theremin, robotic carillon, GPO telephones, and more.
 
 <b>==== 2xAA ====</b>
 
-2xAA harnesses the low-fi power of the Nintendo Game Boy and various other
-portable hardware to create flowing house and techno sets. He also produces
-eye catching visuals using nothing but JavaScript.
+Musician, generative &amp; visual artist, and developer Sam Wray will introduce
+you to the world of chiptune. Enjoy a live performance of retro-fueled techno.
+An exciting musical adventure, featuring the classic power of Nintendo's Game
+Boy.
 
 <a href="https://2xaa.fm/">2xaa.fm</a> / <a href="https://twitter.com/_2xAA">@_2xAA</a>
 
