--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -51,7 +51,8 @@ theory, promise.
 
 "Craft in digital musical instrument design"
 
-Investigations into reframing digital musical instrument design as a tactile and embodied craft practice
+Investigations into reframing digital musical instrument design as a tactile
+and embodied craft practice.
 
 In this short talk I will review some of my PhD research in the domain of
 digital musical instrument design, sometimes known as digital lutherie. Despite
@@ -97,7 +98,8 @@ Boy.
 
 <b>==== "Synthclub Jam Session" ====</b>
 
-Matthew Yee-King, Mick Grierson and special guests including an "evolvable modular synth".
+Matthew Yee-King, Mick Grierson and special guests including an "evolvable
+modular synth"
 
 * <a href="http://www.yeeking.net/index.php?location=sound">yeeking.net</a> / <a href="https://twitter.com/myeeking">@myeeking</a>
 * <a href="http://mickgrierson.co.uk/">mickgrierson.co.uk</a>
