--- a/about.html
+++ b/about.html
@@ -26,6 +26,11 @@ You can find us on Twitter as <a href="https://twitter.com/dorkbotlondon">@dorkb
 
 Or join the <a href="https://www.facebook.com/groups/1494354627526302/">Facebook group here</a>.
 
+<b>Chat / Slack</b>
+
+We have a Slack where the Dorkbot community chatters about projects and exciting
+things they find, you can <a href="https://join.slack.com/t/dorkbotlondon/shared_invite/zt-eozeft0y-mW~bELYuSn5mbztV1UO3GA">join it here</a>.
+
 <b>Mailing lists</b>
 
 Sign up to our <a href="http://eepurl.com/bCbfhn">announce list</a> for infrequent updates on upcoming dorkbot events.
