Correct the misspellings of Larsson: Larson, Llarson

--- a/_posts/2006-03-18-35.html
+++ b/_posts/2006-03-18-35.html
@@ -8,7 +8,7 @@ tags:
  - Mike Harrison
  - Invited Cinema
  - Javier Candeira
- - James Larson
+ - James Larsson
  - Chun and Oli
  - Alex Mclean
  - Dave Griffith
@@ -42,7 +42,7 @@ Featuring the light and airy...
 <br />Free Software Art
 </li>
 
-<li><strong>James Llarson</strong>
+<li><strong>James Larsson</strong>
 
 <br />My crazy inventions past and present
 </li>
@@ -78,4 +78,3 @@ Featuring the light and airy...
 </li>
 
 </ul>
-
