--- a/_posts/2008-12-11-dorkmas-2008.html
+++ b/_posts/2008-12-11-dorkmas-2008.html
@@ -10,7 +10,7 @@ tags:
  - Mike Harrison
  - Dominic Harris
  - Mick Grierson
- - James Larson
+ - James Larsson
  - Tim Hunkin
 ---
 
@@ -38,7 +38,7 @@ Featuring the lurking and sleazy...
 </li>
 
 <li><strong>TBA</strong>
- - James Larson
+ - James Larsson
 <br />
 </li>
 
@@ -54,4 +54,3 @@ Featuring the lurking and sleazy...
 
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/12623032@N08/3104139795"><img border="0" alt="" src="http://farm4.static.flickr.com/3174/3104139795_57b3f64531_s.jpg" /></a><br />
-
