--- a/_posts/2012-06-23-Dorkboat2012.html
+++ b/_posts/2012-06-23-Dorkboat2012.html
@@ -28,7 +28,7 @@ This is limited to 90 *advance tickets only*, available here:https://dorkboat.ev
 
 The Dorkboat schedule is not yet fixed, but will include (in no particular order):
 
-- James Larson  (http://tinyurl.com/mj3hf9)
+- James Larsson  (http://tinyurl.com/mj3hf9)
 - Anna Dimitriu (http://www.normalflora.co.uk/)
 - James Bridle (http://shorttermmemoryloss.com)
 - FakeBitPolytechnic (http://www.fakebitpolytechnic.com/)
