Fix the spelling of "Mike Harrison"

--- a/_posts/2006-04-19-36.html
+++ b/_posts/2006-04-19-36.html
@@ -6,7 +6,7 @@ end:   2006-04-19 23:00
 where: state51
 tags:
  - Pedro Peregrino
- - Mike Harrisson
+ - Mike Harrison
  - Patrick Tresset
  - Michela Ledwidge
  - Eleanor Dare
