Add video/data to db99

--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -3,24 +3,54 @@ layout: post
 number: 99
 start: 2020-12-17 19:30:00
 end: 2020-12-17 21:00:00
+where: the_internet
 tags:
     - Alex Zivanovic
     - Julie Freeman
     - Air Giants
 ---
 
-<b>DORKMAS 2020!</b>
+<b>DORKMAS 2020: CYBERSPACE EDITION!</b>
 
 Another year, another Dorkmas! It's cold and strange outside, so come and gather
-in the virtual warmth of an online Dorkbot (link to follow).
+in front of the virtual fireplace of an online Dorkbot.
 
-Free entry, no registration required. Talks start 7.30pm. We'll be running an
-accompanying chat and social in the <a href="https://dorkbotlondon.slack.com/join/shared_invite/zt-eozeft0y-mW~bELYuSn5mbztV1UO3GA#/">Dorkbot London Slack.</a>
+No registration required, just come back to this page. Talks start 7.30pm.
+
+We'll be running an accompanying chat and fun in the <a href="https://dorkbotlondon.slack.com/join/shared_invite/zt-eozeft0y-mW~bELYuSn5mbztV1UO3GA#/">Dorkbot London Slack</a>!
 
 Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
 
 With short talks from...
+
+<b>==== Alex Zivanovic ====</b>
+
+"The Senster – an interactive robotic sculpture from 50 years ago"
+
+Alex will talk about the Senster, what it did, how it did it and the lessons
+can we learn from it.
+
+He’ll also update us on its recent resurrection to working order.
+
+<a href="https://twitter.com/aziv">@asiv</a> / <a href="http://www.senster.com/ihnatowicz/senster/index.htm">senster.com</a>
+
+
+<b>==== Julie Freeman ====</b>
+
+"ALICE in microbe land or Why we should all be taking the piss to save the planet."
+
+Julie will talk about her latest data art project Active Living Infrastructure:
+Controlled Environment (ALICE) which aims to create a live digital interface
+between microbes and humans.
+
+Working with Bristol Robotics Lab, and Newcastle University's Experimental
+Architecture team, ALICE is concerned with how can we build an interface to
+integrate urine consuming electricity producing microbes into our homes. Pee
+Power FTW.
+
+<a href="https://twitter.com/joz_freeman">@joz_freeman</a> / <a href="https://translatingnature.org/">translatingnature.org</a>
+
 
 <b>==== Air Giants ====</b>
 
@@ -35,35 +65,6 @@ They're also very interested in finding new collaborations and outlets for the
 Giants, so please bring your ideas to the Slack channel.
 
 <a href="https://twitter.com/airgiantsHQ">@airgiantsHQ</a> / <a href="https://airgiants.co.uk">airgiants.co.uk</a>
-
-
-<b>==== Julie Freeman ====</b>
-
-"ALICE in microbe land
-or Why we should all be taking the piss to save the planet."
-
-Julie will talk about her latest data art project Active Living Infrastructure:
-Controlled Environment (ALICE) which aims to create a live digital interface
-between microbes and humans.
-
-Working with Bristol Robotics Lab, and Newcastle University's Experimental
-Architecture team, ALICE is concerned with how can we build an interface to
-integrate urine consuming electricity producing microbes into our homes.
-Pee Power FTW.
-
-<a href="https://twitter.com/joz_freeman">@joz_freeman</a> / <a href="https://translatingnature.org/">translatingnature.org</a>
-
-
-<b>==== Alex Zivanovic ====</b>
-
-"The Senster – an interactive robotic sculpture from 50 years ago"
-
-Alex will talk about the Senster, what it did, how it did it and the lessons
-can we learn from it.
-
-He’ll also update us on its recent resurrection to working order.
-
-<a href="https://twitter.com/aziv">@asiv</a> / <a href="http://www.senster.com/ihnatowicz/senster/index.htm">senster.com</a>
 
 
 Plus music from a secret special guest!
