--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -19,7 +19,8 @@ No registration required, we'll be streaming directly to this page. Talks start 
 
 We'll be running an accompanying chat and other fun in the <a href="https://dorkbotlondon.slack.com/join/shared_invite/zt-eozeft0y-mW~bELYuSn5mbztV1UO3GA#/">Dorkbot London Slack</a>!
 
-Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
+Don't forget to attend <a href="https://www.facebook.com/events/142404554078455/">the Facebook event</a>, <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>,
+and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
 
 With short talks from...
