--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -34,7 +34,7 @@ we can learn from it.
 
 He’ll also update us on its recent resurrection to working order.
 
-<a href="https://twitter.com/aziv">@asiv</a> / <a href="http://www.senster.com/ihnatowicz/senster/index.htm">senster.com</a>
+<a href="https://twitter.com/aziv">@aziv</a> / <a href="http://www.senster.com/ihnatowicz/senster/index.htm">senster.com</a>
 
 
 <b>==== Julie Freeman ====</b>
