--- a/calendar.ics.html
+++ b/calendar.ics.html
@@ -13,6 +13,6 @@ DTSTART;TZID=Europe/London;VALUE=DATE-TIME:{{ post.start | date: "%Y%m%dT%H%M00"
 DTEND;TZID=Europe/London;VALUE=DATE-TIME:{{ post.end | date: "%Y%m%dT%H%M00" }}
 UID:{{ post.date | date: "%Y%m%d" }}@dorkbotlondon.org
 LOCATION:{{ site.data.locations.[post.where].where }}
-URL:{{ post.url }}
+URL:{{site.baseurl}}{{ post.url }}
 END:VEVENT{% endif %}{% endfor %}
 END:VCALENDAR
