--- a/calendar.ics.html
+++ b/calendar.ics.html
@@ -14,5 +14,6 @@ DTEND;TZID=Europe/London;VALUE=DATE-TIME:{{ post.end | date: "%Y%m%dT%H%M00" }}
 UID:{{ post.date | date: "%Y%m%d" }}@dorkbotlondon.org
 LOCATION:{{ site.data.locations.[post.where].where }}
 URL:{{site.baseurl}}{{ post.url }}
+DESCRIPTION:{{site.baseurl}}{{ post.url }}
 END:VEVENT{% endif %}{% endfor %}
 END:VCALENDAR
