--- a/calendar.ics.html
+++ b/calendar.ics.html
@@ -13,7 +13,7 @@ DTSTART;TZID=Europe/London;VALUE=DATE-TIME:{{ post.start | date: "%Y%m%dT%H%M00"
 DTEND;TZID=Europe/London;VALUE=DATE-TIME:{{ post.end | date: "%Y%m%dT%H%M00" }}
 UID:{{ post.date | date: "%Y%m%d" }}@dorkbotlondon.org
 LOCATION:{{ site.data.locations.[post.where].where }}
-URL:https://dorkbotlondon.org/{{ post.url }}
-DESCRIPTION:https://dorkbotlondon.org/{{ post.url }}
+URL:{{ site.url }}{{ post.url }}
+DESCRIPTION:{{ site.url }}{{ post.url }}
 END:VEVENT{% endif %}{% endfor %}
 END:VCALENDAR
