Add secret special guest (Deerful) to DB99

--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -7,7 +7,8 @@ where: the_internet
 tags:
     - Alex Zivanovic
     - Julie Freeman
-    - Air Giants
+    - Robert Nixdorf
+    - Emma Winston
 ---
 
 <b>DORKMAS 2020: CYBERSPACE EDITION!</b>
@@ -68,4 +69,8 @@ Giants, so please bring your ideas to the Slack channel.
 <a href="https://twitter.com/airgiantsHQ">@airgiantsHQ</a> / <a href="https://airgiants.co.uk">airgiants.co.uk</a>
 
 
-Plus music from a secret special guest!
+<b>==== Deerful ====</b>
+
+Livecoding set from Emma Winston, AKA Deerful
+
+<a href="https://emmawinston.me">emmawinston.me</a> / <a href="http://deerful.band">deerful.band</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
