Embed video of DB99

--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -3,7 +3,6 @@ layout: post
 number: 99
 start: 2020-12-17 19:30:00
 end: 2020-12-17 21:00:00
-where: the_internet
 tags:
     - Alex Zivanovic
     - Julie Freeman
@@ -16,12 +15,9 @@ tags:
 Another year, another Dorkmas! It's cold and strange outside, so come and gather
 in front of the virtual fireplace of an online Dorkbot.
 
-No registration required, we'll be streaming directly to this page. Talks start 7.30pm.
+<iframe width="720" height="405" src="https://www.youtube.com/embed/CPDNaCxDWvo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-We'll be running an accompanying chat and other fun in the <a href="https://dorkbotlondon.slack.com/join/shared_invite/zt-eozeft0y-mW~bELYuSn5mbztV1UO3GA#/">Dorkbot London Slack</a>!
-
-Don't forget to attend <a href="https://www.facebook.com/events/142404554078455/">the Facebook event</a>, <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>,
-and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
+Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
 
 With short talks from...
