Better embed/location, fix cal warning

--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -3,6 +3,7 @@ layout: post
 number: 99
 start: 2020-12-17 19:30:00
 end: 2020-12-17 21:00:00
+where: the_internet
 tags:
     - Alex Zivanovic
     - Julie Freeman
@@ -15,7 +16,7 @@ tags:
 Another year, another Dorkmas! It's cold and strange outside, so come and gather
 in front of the virtual fireplace of an online Dorkbot.
 
-<iframe width="720" height="405" src="https://www.youtube.com/embed/CPDNaCxDWvo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="video_stream" width="720" height="405" src="https://www.youtube.com/embed/CPDNaCxDWvo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
