formatting fix or break??

--- a/_posts/2024-04-05-99-5.html
+++ b/_posts/2024-04-05-99-5.html
@@ -28,7 +28,7 @@ tags:
 <article>
     <h3>==== Sarah Angliss ====</h3>
 
-    <p>Sarah Angliss explores the sonorities of voices and instruments, revealing and augmenting them with her distinctive and finely wrought electronic techniques. Her debut opera Giant uses eighteenth century instruments, live electronics and the composer’s bespoke musical automata as it vividly recalls a disquieting story that resonates through the ages.</p>    
+    <p>Sarah Angliss explores the sonorities of voices and instruments, revealing and augmenting them with her distinctive and finely wrought electronic techniques. Her debut opera Giant uses eighteenth century instruments, live electronics and the composer's bespoke musical automata as it vividly recalls a disquieting story that resonates through the ages.</p>    
         <a href="https://www.instagram.com/sarah_angliss/">https://www.instagram.com/sarah_angliss/</a>
         <a href="http://www.sarahangliss.com/giant/">http://www.sarahangliss.com/giant/</a>    
     </article>
